@@ -31,6 +31,7 @@ gem 'webmock'
 
 # Integrations
 gem 'aws-sdk-dynamodb', require: nil
+gem 'aws-sdk-s3', require: nil
 gem 'aws-sdk-sqs', require: nil
 gem 'elasticsearch', require: nil
 gem 'fakeredis', require: nil
